--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-color: #1a1a1a; /* Darker black background */
             color: white;
             font-size: 16px; /* Base font size for mobile */
+            <img src="HL_Logo.png" alt="High Limit Dash Logo" style="width:150px; margin-top: 20px;">
         }
         table {
             width: 100%;
