--- a/index.html
+++ b/index.html
@@ -35,15 +35,25 @@
             background-color: #000000; /* Black background for table cells */
             color: white; /* White text */
         }
-        /* Widen the Driver column */
-        th:nth-child(1), td:nth-child(1) {
+        /* Widen the Driver column in driver table */
+        #drivers th:nth-child(1), #drivers td:nth-child(1) {
             width: 50%; /* Make Driver column wider */
         }
-        th:nth-child(2), td:nth-child(2) {
+        #drivers th:nth-child(2), #drivers td:nth-child(2) {
             width: 30%; /* Qualifying Time column */
         }
-        th:nth-child(3), td:nth-child(3) {
+        #drivers th:nth-child(3), #drivers td:nth-child(3) {
             width: 20%; /* Spin Number column */
+        }
+        /* Starting order table column widths */
+        #startingOrder th:nth-child(1), #startingOrder td:nth-child(1) {
+            width: 20%; /* Row column */
+        }
+        #startingOrder th:nth-child(2), #startingOrder td:nth-child(2) {
+            width: 40%; /* Inside Line column */
+        }
+        #startingOrder th:nth-child(3), #startingOrder td:nth-child(3) {
+            width: 40%; /* Outside Line column */
         }
         input, textarea {
             width: 90%; /* Slightly less than full width for padding */
@@ -74,7 +84,7 @@
             letter-spacing: 1px;
         }
         #startingOrder tr td {
-            background-color: #1E88E5; /* Blue background for starting order table */
+            background-color: #1E88E5; /* Blue background for starting order table cells */
             color: white;
             font-size: 3.5vw; /* Responsive font size */
         }
@@ -213,14 +223,13 @@
         </table>
     </div>
 
-    <div class="header">Starting Order</div>
+    <div class="header">Starting Grid</div>
     <table id="startingOrder">
         <thead>
             <tr>
-                <th>Pos</th>
-                <th>Driver</th>
-                <th>Qualifying Time</th>
-                <th>Spin</th>
+                <th>Row</th>
+                <th>Inside Line</th>
+                <th>Outside Line</th>
             </tr>
         </thead>
         <tbody id="startingOrderBody">
@@ -332,26 +341,29 @@
             let tableBody = document.getElementById('startingOrderBody');
             tableBody.innerHTML = '';
 
-            drivers.forEach((driver, index) => {
-                let row = document.createElement('tr');
-                let posCell = document.createElement('td');
-                posCell.textContent = index + 1;
-                row.appendChild(posCell);
+            // Create up to 4 rows for the grid
+            for (let row = 0; row < 4; row++) {
+                let tr = document.createElement('tr');
+                
+                // Row number cell
+                let rowCell = document.createElement('td');
+                rowCell.textContent = row + 1;
+                tr.appendChild(rowCell);
 
-                let driverCell = document.createElement('td');
-                driverCell.textContent = driver.driver;
-                row.appendChild(driverCell);
+                // Inside Line cell (1st, 3rd, 5th, 7th drivers)
+                let insideCell = document.createElement('td');
+                let insideIndex = row * 2; // 0, 2, 4, 6
+                insideCell.textContent = insideIndex < drivers.length ? drivers[insideIndex].driver : '';
+                tr.appendChild(insideCell);
 
-                let timeCell = document.createElement('td');
-                timeCell.textContent = driver.time;
-                row.appendChild(timeCell);
+                // Outside Line cell (2nd, 4th, 6th, 8th drivers)
+                let outsideCell = document.createElement('td');
+                let outsideIndex = row * 2 + 1; // 1, 3, 5, 7
+                outsideCell.textContent = outsideIndex < drivers.length ? drivers[outsideIndex].driver : '';
+                tr.appendChild(outsideCell);
 
-                let spinCell = document.createElement('td');
-                spinCell.textContent = driver.spin;
-                row.appendChild(spinCell);
-
-                tableBody.appendChild(row);
-            });
+                tableBody.appendChild(tr);
+            }
         }
 
         // Reset all form data with confirmation
@@ -410,8 +422,6 @@
                 navigator.serviceWorker.addEventListener('message', event => {
                     if (event.data && event.data.action === 'new-content') {
                         // Trigger a reload to apply the new content
-                        window.location.reload();
- Ascendancy
                         window.location.reload();
                     }
                 });
