--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <body onload="loadFormData()">
 
     <!-- Fan Information Header -->
-    <div class="header">Fan Information</div>
+    <div class="header">Hot Seat Fan Question of the Night</div>
 
     <!-- Fan Input Fields -->
     <div class="fan-container">
