--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         }
         /* Custom font size for Hot Seat Fan Question header */
         .fan-header {
-            font-size: 3vw; /* Smaller font size for fan header (adjust as needed) */
+            font-size: 6vw; /* Match other headers for consistency */
         }
         #startingOrder tr td {
             background-color: #1E88E5; /* Blue background for starting order table cells */
@@ -136,7 +136,7 @@
             color: black; /* Black text on hover */
         }
         /* Media query for smaller screens */
-        @media (max-width: 480px) {
+        @media (max-width: 600px) {
             table {
                 font-size: 4vw; /* Slightly larger font for very small screens */
             }
@@ -148,7 +148,7 @@
                 font-size: 7vw;
             }
             .fan-header {
-                font-size: 6vw; /* Adjusted for smaller screens */
+                font-size: 7vw; /* Adjusted for smaller screens */
             }
             .table-container {
                 min-height: auto; /* Adjust for smaller screens */
