--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         }
         /* Custom font size for Hot Seat Fan Question header */
         .fan-header {
-            font-size: .25vw; /* Match other headers for consistency */
+            font-size: 5vw; /* Match other headers for consistency */
         }
         #startingOrder tr td {
             background-color: #1E88E5; /* Blue background for starting order table cells */
@@ -163,7 +163,7 @@
 <body onload="loadFormData()">
 
     <!-- Fan Information Header -->
-    <div class="header fan-header">Hot Seat Fan Question of the Night</div>
+    <div class="header fan-header">Fan Question of the Night</div>
 
     <!-- Fan Input Fields -->
     <div class="fan-container">
