--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                 font-size: 5vw;
                 padding: 8px 16px;
             }
+                #startingOrder, #startingOrder th, #startingOrder td {
+        border: 2px solid black;
+    }
         }
     </style>
 </head>
